syntax = "proto3";

option java_multiple_files = true;
option java_package = "cl.ucn.fondef.microsata.grpc";
option optimize_for = CODE_SIZE;

/**
 * The Usuario.
 */
message UsuarioGrpc {
  int64 id = 1;
  string rut = 2;
  string email = 3;
  string nombre = 4;
  string apellido = 5;
  // TODO: Check if we need to send this by the wire
  string password = 6;
  EstadoUsuarioGrpc estado_usuario_grpc = 7;
  RolUsuarioGrpc rol_usuario_grpc = 8;

  enum EstadoUsuarioGrpc {
    ESTADO_USUARIO_GRPC_UNSPECIFIED = 0;
    ESTADO_USUARIO_GRPC_ACTIVO = 1;
    ESTADO_USUARIO_GRPC_INACTIVO = 2;
  }

  enum RolUsuarioGrpc {
    ROL_USUARIO_GRPC_UNSPECIFIED = 0;
    ROL_USUARIO_GRPC_ADMINISTRADOR = 1;
    ROL_USUARIO_GRPC_CONFIGURADOR = 2;
    ROL_USUARIO_GRPC_OPERADOR = 3;
  }

}

/**
 * The Equipo
 */
message EquipoGrpc {
  int64 id = 1;
  string nombre = 2;
  string descripcion = 3;
  string url_repositorio = 4;
  EstadoEquipoGrpc estado_equipo_grpc = 5;
  repeated ArchivoGrpc archivos_grpc = 6;

  enum EstadoEquipoGrpc {
    ESTADO_UNSPECIFIED = 0;
    ESTADO_PROTOTIPO = 1;
    ESTADO_CONSTRUCCION = 2;
  }

  /**
   * The Archivo.
   */
  message ArchivoGrpc {
    int64 id = 1;
    int64 size = 2;
    string nombre = 3;
    bytes data = 4;
    TipoArchivoGrpc tipo_archivo_grpc = 5;

    enum TipoArchivoGrpc {
      TIPO_UNSPECIFIED = 0;
      TIPO_PNG = 1;
      TIPO_JPG = 2;
      TIPO_PDF = 3;
    }
  }
}
